fixed spacing between nav and main

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,7 @@ nav {
 main {
     display: flex;
     flex-direction: column;
-    margin-top: 3%;
+    margin-top: -12%;
 
 }
 
